Updated unit tests and README